# reduction-llm-experiments

./: .dockerignore  .gitignore  CONFIG.md  Dockerfile  config.ini  config.sh  config_cot.sh  deepspeed-config-nvme.json  deepspeed-config-profile.json  deepspeed-config.json  docker-compose.yml  finetune.py  finetune.sh  inference.py  inference.sh  pyproject.toml  readme.txt  requirements.in  requirements.txt  run.sh  run_cot.sh  run_cot_generation.sh  smoke_test.py  submit_pipeline.sh  update.sh  verify_reductions.py
.devcontainer/: bootstrap.sh  devcontainer.json
examples/: extract_reductions.py  latex_to_plaintext.py  reduction_cot_batch.py  reduction_proof_verification.py  reduction_refine.py  reduction_verification.py  refine_reductions.py
logs/: .gitkeep
scripts/: evaluate.sh  finetune.sh  generate_cot.sh  inference.sh  reduction_cot_batch.sh  reduction_proof_verification.sh  setup.sh  slurm_example.sh  slurm_multi_gpu.sh  slurm_setup.sh  submit_pipeline.sh  update.sh
src/: __init__.py  backend.py  compare.py  config.py  context_budget.py  core_backend.py  debug_printer.py  evaluate.py  evaluator.py  finetune.py  generate_cot.py  global_eval.py  inference.py  merger.py  parse.py  pipeline.py  prompts.py  repair.py  runner.py  schemas.py  strategies.py  synthesize.py  utils.py  vllm_structured.py
tests/: example_reduction.txt  test_id_stability.py  test_inference.py  test_parse.py  test_repair_apply.py  test_roundtrip_eval.py
