[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reduction-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "vllm",
    "pandas",
    "numpy",
    "pydantic",
    "python-dotenv",
    "flashinfer-python"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]