[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reduction-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "instructor",
    "openai",
    "pandas",
    "numpy",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]