[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reduction-llm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "vllm",
    "instructor",
    "openai",
    "pandas",
    "numpy",
    "pydantic",
    "psutil",
    "requests",
]

[tool.setuptools]
packages = ["src", "examples"]
py-modules = []